chore: Use Java 11 Path.of instead of Paths.get which just calls the same